Se acomodo la configuracion para consultar por autores en sedici. y las urls a los autores de sedici y cic

--- a/config-files/sedici-config.ini
+++ b/config-files/sedici-config.ini
@@ -1,5 +1,6 @@
 [config]
 name = "sedici"
 domain = "sedici.unlp.edu.ar"
-author = "author_filter:"
+author = "author:"
 subtype = "sedici.subtype:"
+protocol = "http://"
